--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -130,6 +130,27 @@
   &.not-looking { width: 400px; }
 }
 
+.whatsapp-button {
+  @include border-radius(3px);
+  background-color: 	#25D366;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  margin: 1.5rem auto;
+  width: 220px;
+  font-size: 1.375rem;
+  @include sans_light;
+  color: #666;
+  line-height: 55px;
+  @include transition(all .2s ease);
+
+  &:hover {
+    background-color:rgb(7, 114, 82);
+    color: #fff;
+  }
+
+  &.not-looking { width: 400px; }
+}
 // resume content styles
 
 .content-section {
