--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -113,9 +113,9 @@
   background-color: #efefef;
   text-decoration: none;
   text-align: center;
-  display: block;
-  margin: 1.5rem auto;
-  width: 220px;
+  display: inline-block;
+  margin: auto;
+  width: 150px;
   font-size: 1.375rem;
   @include sans_light;
   color: #333;
@@ -132,20 +132,20 @@
 
 .whatsapp-button {
   @include border-radius(3px);
-  background-color: 	#25D366;
+  background-color: 	rgb(22, 192, 84);
   text-decoration: none;
   text-align: center;
-  display: block;
-  margin: 1.5rem auto;
-  width: 220px;
+  display: inline-block;
+ 
+  width: 150px;
   font-size: 1.375rem;
   @include sans_light;
-  color: #666;
+  color: #FFF;
   line-height: 55px;
   @include transition(all .2s ease);
 
   &:hover {
-    background-color:rgb(7, 114, 82);
+    background-color:rgb(10, 139, 101);
     color: #fff;
   }
 
