--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -233,8 +233,9 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">There's nothing more to look here. Hit the contact button now!</p>
+
+        <p class="footer-line">Last Updated: February 2022</p>
       </footer>
 
     </div>
