--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -233,7 +233,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">There's nothing more to look here. Hit the contact button now!</p>
+        <p class="footer-line">There's nothing more to see here. Hit the contact button now!</p>
 
         <p class="footer-line">Last Updated: February 2022</p>
       </footer>
